@@ -7,6 +7,16 @@ java -jar archivesspace.v0.2.0-1.jar
 
 This will start the ArchivesSpace application running on `http://localhost:8080/` and the backend web service running on `http://localhost:8089/`.
 
+## java.lang.OutOfMemoryError: PermGen space
+
+On OS X, I needed to add `-XX:PermSize=128m -XX:MaxPermSize=256m` because to avoid the above error.
+
+```sh
+java -XX:PermSize=128m -XX:MaxPermSize=256m -jar archivesspace.v0.2.0-1.jar
+```
+
+## different ports
+
 If you’d like to use different ports, you can run:
 
 ```sh
